# University

Year 1/Sem 2/DSA/ADTSetDLLA - lab3/: CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  ShortTest.h  ex10  main.cpp
Year 1/Sem 2/DSA/ADTSortedSetHash - lab4/: CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  ShortTest.cpp  ShortTest.h  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h  ex19  main.cpp
Year 1/Sem 2/DSA/DSA_PW5_SortedIndexedList_BTS_on_array/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h  SortedIndexedList.cpp  SortedIndexedList.h  ex15
Year 1/Sem 2/GraphAlgo/graph1/: graph.py
Year 1/Sem 2/GraphAlgo/graph2/: Assignment2.pages  Minimum lenght paths on graph files.pages  directed_graph.py  graph.txt  main.py  presentation.py  tests.py
Year 1/Sem 2/GraphAlgo/graph4/: directed_graph.py  graph.txt  graphs.txt  presentation.py  tests.py
Year 1/Sem 2/GraphAlgo/graph5/: directed_graph.py  graph.txt  graph1.txt  main.py  presentation.py  tests.py
Year 1/Sem 2/OOP/TaskManager/: CMakeLists.txt  main.cpp  task.txt
Year 1/Sem 2/OOP/TaskManager/domain/: Programmer.cpp  Programmer.h  Task.cpp  Task.h  observer.h
Year 1/Sem 2/OOP/TaskManager/repository/: CodeRepository.cpp  CodeRepository.h
Year 1/Sem 2/OOP/TaskManager/ui/: ProgrammerWindow.cpp  ProgrammerWindow.h
Year 1/Sem 2/OOP/a11-12/: CMakeLists.txt  main.cpp
Year 1/Sem 2/OOP/a11-12/Domain/: Movie.cpp  Operation.cpp  Operation.h
Year 1/Sem 2/OOP/a11-12/Files/: Watchlist.csv  Watchlist.html  movies.txt
Year 1/Sem 2/OOP/a11-12/GUI/: gui.cpp  gui.h  gui.ui  ui_GUI.h
Year 1/Sem 2/OOP/a11-12/GUI/csv_html_gui/: csv_html_gui.cpp  csv_html_gui.h  csv_html_gui.ui  ui_csv_html_gui.h
Year 1/Sem 2/OOP/a11-12/Repository/: CSV_Watchlist.cpp  HTML_Watchlist.cpp  HTML_Watchlist.h  Repository.cpp  Repository.h  WatchList.cpp  WatchList.h
Year 1/Sem 2/OOP/a11-12/Service/: Service.cpp  Service.h
Year 1/Sem 2/OOP/a11-12/Tests/: Tests.cpp  Tests.h
Year 1/Sem 2/OOP/a11-12/UI/: UI.cpp
Year 1/Sem 2/OOP/a3-4/: CMakeLists.txt  domain.c  domain.h  dynamic_array.c  dynamic_array.h  library.h  main.c  reposiotry.c  repository.h
Year 1/Sem 2/OOP/a5-6-914LupeanOana/: AdministratorService.cpp  AdministratorService.h  CMakeLists.txt  DynamicVector.h  Main.cpp  Movie.cpp  Movie.h  Repository.cpp  Repository.h  Ui.cpp  Ui.h  UserService.cpp  UserService.h  Validator.cpp  tests.cpp  tests.h
Year 1/Sem 2/OOP/a8-9-914-Lupean-Oana/: CMakeLists.txt  CSVrepository.cpp  CSVrepository.h  HTMLrepository.cpp  HTMLrepository.h  Playlist.csv  Playlist.html  main.cpp  movie.cpp  movie.h  movies.txt  repository.cpp  service.cpp  service.h  ui.cpp  ui.h  userRepository.cpp  userRepository.h  userService.cpp  userService.h  validators.cpp  validators.h
Year 1/Sem 2/OOP/e914-914LupeanOana-1/: CMakeLists.txt  main.cpp  roads.txt
Year 1/Sem 2/OOP/e914-914LupeanOana-1/domain/: driver.cpp  driver.h  observer.h  road.cpp  road.h
Year 1/Sem 2/OOP/e914-914LupeanOana-1/repository/: CodeRepository.cpp  CodeRepository.h
Year 1/Sem 2/OOP/e914-914LupeanOana-1/ui/: DriverWindow.cpp  DriverWindow.h
Year 1/Sem 2/OOP/t1-914LupeanOana-1/: CMakeLists.txt  DynamicVector.h  exception.cpp  exception.h  main.cpp  repository.cpp  repository.h  school.cpp  school.h  service.cpp  service.h  ui.cpp  ui.h
Year 1/Sem 2/OOP/t2-914LupeanOana-1/: CMakeLists.txt  Car.cpp  Car.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  Service.cpp  Service.h  TurboEngine.cpp  TurboEngine.h  UI.cpp  UI.h  main.cpp
Year 1/Sem 2/OOP/t3-914LupeanOana/: CMakeLists.txt  Domain.cpp  Domain.h  GUI.cpp  GUI.h  Service.cpp  Service.h  file.txt  main.cpp
Year 1/Sem 2/OOP/untitled1/: CMakeLists.txt  Country_Repository.c  Country_Repository.h  Service.c  Service.h  country.c  country.h  dynamic_array.c  dynamic_array.h  main.c  test.c  test.h  ui.c  ui.h
Year 1/Sem 2/OS/: eth rezolvare
Year 1/Sem 2/OS/ProceseBrad/Problema1/: f2.txt
Year 1/Sem 2/OS/threads/: probl2.txt  probl3.txt  probl4.txt  probl5.txt
Year2/Sem 3/DB/: DB LAB2.pages  DB Seminar1.pages  DB lab1.pages  LAB2.sql  lab4.sql  lab5.sql  practical.sql  tema3.sql
Year2/Sem 3/MAP/: MAP seminar 1.pages
Year2/Sem 3/PLF/: PLF LAB 1.pages  PLF Seminar2.pages  examenPLFex2.pages  p2.pages  p3 plf.pages  seminar 1 PLF.pages
Year2/Sem 3/PLF/p1/: P1 12A-2.pl  P1 ex12.pages  p1 12B.pl
Year2/Sem 3/PS/: PS SEMINAR 6.pages  PS Seminar 2.pages  PS Seminar 3.pages  lab3.m  lab32.m  lab33.m  lab5b1a.m  lab6.m  practic.m  test.m
Year2/Sem 3/PS/lab4/: bernoulli.m  binomial.m  c.m  d.m
Year2/Sem 4/AI/: AI_lab2_2023.ipynb  AI_lab_4_2023-unsolved 2.ipynb  AI_lab_7_2023_bug_fix_v4.ipynb  Lab11_unsolved 1.ipynb  Lab12.ipynb  Lab13.ipynb  Lab3_AI_2023_unsolved.ipynb  Lab_10_2023.ipynb
Year2/Sem 4/ISS/: Layers.mdj  Request.mdj  UMLDiagram.mdj  Untitled.mdj  classdiagram.mdj  iss-tema3.mdj  iss1.mdj  sequencediagram.mdj  uml2.mdj
Year2/Sem 4/WEB/: lab7&8
Year2/Sem 4/WEB/lab1/: daisy.html
Year2/Sem 4/WEB/lab2/: lab2--1.html  lab2--2.html  lab2-1.css  lab2-2.css
Year2/Sem 4/WEB/lab3/: yahoo-lab3.html
Year2/Sem 4/WEB/lab5/: lab4.html  lab4.js
Year2/Sem 4/WEB/lab6/: lab6.html  script2.js  styles.css
Year2/Sem 4/WEB/preg exam/: PHP-EXAM  PHP_Chanels  PHP_Family  PHP_UsersContent  citylink 2  productorder  websites
