cmake_minimum_required(VERSION 3.21)
project(DSA_PW5_SortedIndexedList_BTS_on_array)

set(CMAKE_CXX_STANDARD 17)

add_executable(DSA_PW5_SortedIndexedList_BTS_on_array SortedIndexedList.cpp SortedIndexedList.h ListIterator.cpp ListIterator.h ShortTest.cpp ShortTest.h ExtendedTest.cpp ExtendedTest.h App.cpp)
